# Titanic-Capstone-Project

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  environment.yml  pyproject.toml
ml/data/processed/: test_cleaned.csv  test_features.csv  train_cleaned.csv  train_features.csv
ml/notebooks/: 01_data_exploration.ipynb  02_feature_engineering.ipynb  03_model_experiments.ipynb  04_eda_visualization.ipynb  data_exploration.ipynb  eda_visualization.ipynb  feature_engineering.ipynb  model_evaluation.ipynb  model_experiments.ipynb  random_forest_model.ipynb
ml/notebooks/feature_engineering/: CabinDeck.ipynb
ml/src/config/: paths.py
scripts/: setup.sh
titanic_capstone/titanic_capstone/: settings.py
web/: manage.py
web/predictor/: forms.py  ml_model.py  models.py  titanic_model.pkl  urls.py  views.py
web/predictor/migrations/: 0001_initial.py
web/predictor/templates/predictor/: history.html  home.html  prediction_form.html  result.html
web/static/css/: index.css
web/templates/: base.html  navbar.html
web/titanic_capstone/: asgi.py  settings.py  urls.py  wsgi.py
