[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "titanic-capstone-project"
version = "0.1.0"
description = "Titanic capstone notebooks and web app"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["ml*"]
